# CodeBEGen

./: .env.sample  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  FOUR_TIER_QUALITY_INTEGRATION_COMPLETE.md  LICENSE  README.md  alembic.ini  config.py  conftest.py  docker-compose.yaml  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 64fa97f864fc_initial_migration.py
app/api/db/: database.py
app/api/v1/endpoints/: quality_dashboard.py  quality_pipeline.py
app/api/v1/models/: __init__.py  base.py  endpoints.py  http_methods_test_endpoint.py  projects.py
app/api/v1/routes/: __init__.py  auto_fix.py  code_generation.py  endpoints.py  get_all_endpoints.py  http_methods_test_endpoint.py  project_db.py  project_db_migration.py  project_docs.py  project_helpers.py  project_migrations.py  project_models.py  project_schemas.py  project_structure.py  projects.py  streaming.py
app/api/v1/schemas/: code_generation.py  endpoint_list_response.py  endpoints.py  project_db.py  project_db_migration.py  project_docs.py  project_helpers.py  project_migrations.py  project_models.py  project_schemas.py  project_structure.py  projects.py  response.py
app/api/v1/services/: code_generation.py  code_generation_quality_middleware.py  code_quality_service.py  context_aware_langchain_service.py  endpoints.py  enhanced_code_quality_service.py  enhanced_prompt_service.py  enhanced_quality_middleware.py  error_pattern_database.py  get_all_endpoints.py  git_service.py  (+22 more)
codebegen_fe/: .env.sample  .gitignore  README.md  commitlint.config.js  components.json  package.json  pnpm-lock.yaml  prettierrc.cjs  tailwind.config.ts
codebegen_fe/.github/workflows/: ci.yml
codebegen_fe/src/app/: globals.css  layout.tsx  provider.tsx
codebegen_fe/src/config/: index.ts
codebegen_fe/src/utils/: constant.ts  countries-data.ts  index.ts  subdomain.ts
project_template/: main.py  requirements.txt
project_template/alembic/: env.py
project_template/core/: auth.py
project_template/go/: go.mod  main.go  template_config.json
project_template/go/config/: config.go
project_template/go/controllers/: auth_controller.go
project_template/go/middleware/: auth_middleware.go
project_template/go/models/: user.go
project_template/go/routes/: routes.go
project_template/go/utils/: jwt.go
project_template/javascript/: app.js  package.json  template_config.json
project_template/javascript/config/: cors.js  database.js  env.js  express.js
project_template/javascript/controllers/: authController.js
project_template/javascript/middleware/: async.js  error.js
project_template/javascript/models/: user.js
project_template/javascript/routes/: auth.js
project_template/javascript/utils/: error-response.js
project_template/php/: composer.json  template_config.json
project_template/php/config/: app.php  auth.php
project_template/php/routes/: api.php
project_template/python/: alembic.ini  main.py  template_config.json
project_template/python/alembic/: env.py
project_template/python/core/: auth.py  database.py  router.py
project_template/python/endpoints/: health.get.py  login.post.py  signup.post.py
project_template/python/models/: user.py
project_template/typescript/: package.json  template_config.json
project_template/typescript/src/: app.module.ts
scripts/: test_project_context.py
templates/: index.html
tests/: COMPREHENSIVE_TEST_SUITE_SUMMARY.md  TEST_COVERAGE_SUMMARY.md  test_auto_fix_integration.py  test_code_generation_comprehensive.py  test_code_generation_fixed.py  test_comprehensive_quality_demo.py  test_python_template_integration.py  test_quality_pipeline_integration.py  test_quality_pipeline_performance.py  validate_test_suite.py
tests/v1/: test_get_all_endpoints.py
tests/v1/code_generation/: __init__.py  mock_code_merge_utils.py  mock_factory.py  test_code_generation.py  test_code_merge_utils.py  test_helpers.py  test_incremental_code_generation.py  test_incremental_code_generation_e2e.py  test_model_schema_update_service.py
tests/v1/endpoint/: test_create_endpoint.py  test_get_endpoint.py  test_update_endpoint.py
tests/v1/http_methods_endpoint_test/: test_http_methods_endpoints.py
tests/v1/project/: test_initalize_project.py  test_project_download_file.py
tests/v1/project_docs/: test_project_docs.py  test_project_docs_content.py
tests/v1/project_helpers/: test_project_helpers.py  test_project_helpers_contents.py
tests/v1/project_migrations/: test_project_migrations.py  test_project_migrations_contents.py
tests/v1/project_models/: test_project_models.py  test_project_models_contents.py
tests/v1/project_schemas/: test_project_schemas.py  test_project_schemas_contents.py
(+51 files in other folders)
