[tool.poetry]
name = "code-gen-be"
version = "0.1.0"
description = "CodegenBE is an AI-powered tool that enables developers to rapidly generate backend API functionalities with minimal friction."
authors = [
    "Marline Khavele <khavelemarline@gmail.com>",
    "Oshin Samuel <samuelt.oshin@gmail.com>",
    "Emmanuel Ekwere <emaduilzjr1@gmail.com>",
    "Samuel Henrietta Onoge <hetty8004@gmail.com>"
]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
fastapi = ">=0.115.12,<0.116.0"
alembic = ">=1.15.2,<2.0.0"
pre-commit = ">=4.2.0,<5.0.0"
uvicorn = ">=0.34.0,<0.35.0"
python-decouple = ">=3.8,<4.0"
pydantic-settings = ">=2.8.1,<3.0.0"
psycopg2 = ">=2.9.10,<3.0.0"
uuid6 = ">=2024.7.10,<2025.0.0"
flake8 = ">=7.2.0,<8.0.0"
requests = ">=2.32.3,<3.0.0"
pytest = ">=8.3.5,<9.0.0"
httpx = ">=0.28.1,<0.29.0"
itsdangerous = ">=2.2.0,<3.0.0"
langchain = ">=0.3.23,<0.4.0"
langchain-core = ">=0.3.51,<0.4.0"
langchain-anthropic = ">=0.3.10,<0.4.0"
langchain-community = ">=0.3.21,<0.4.0"
websockets = ">=15.0.1,<16.0.0"
jinja2 = ">=3.1.6,<4.0.0"
pytest-asyncio = "^0.26.0"
responses = "^0.25.7"
psycopg2-binary = "^2.9.10"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.26.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"